add dockerfile and project info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=shop-online
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shop-online
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/shop-online
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
