rewrite dao on reactive stack

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=shop-online
 
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/shop-online
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/shop-online
+spring.r2dbc.username=postgres
+spring.r2dbc.password=1234
+spring.data.r2dbc.repositories.enabled=true
+
 spring.datasource.hikari.initialization-fail-timeout=30000
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=3
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.thymeleaf.enabled=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
