--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.data.r2dbc.repositories.enabled=true
 spring.datasource.hikari.initialization-fail-timeout=30000
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=3
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.thymeleaf.enabled=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
+
+spring.webflux.charset=UTF-8
+
